# thermostat-pi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  thermostat.ini
cmake/Modules/: FindMariaDB.cmake
include/: dht22.h  display.h  ini_file.h  mysql_util.h
src/: Makefile  db.c  db.h  dht22.c  display.c  ini_file.c  mysql_util.c  test_button.c  test_database.c  test_dht22.c  test_display.c  test_ini_file.c  test_relay.c  test_threads.c  thermostat.c  util.c  util.h
src/tryouts/: blink_led.c  compile_blink_led.sh  compile_dht22.sh  compile_relay.sh  compile_shift_register.sh  compile_three_digits.sh  dht22.c  relay.c  shift_register.c  three_digits.c
